--- a/style.css
+++ b/style.css
@@ -4,12 +4,15 @@
   box-sizing: border-box;
 }
 
+body{
+  width: 100%;
+}
 
 
 .container-ganas-porque-ganas {
-  width: 805px;
-  background-image: url(./img/fondo.png);
-  height: 1858px;
+  width: 50.31rem;
+  background-image: url("https://pmi--c.documentforce.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Png&versionId=0684H00000HUUJj&operationContext=DELIVERY&contentId=05T4H00000uYp3l&page=0&d=/a/4H00000263Ch/RA8uWuh8cYp3WYKWPPoF636UinsSXC6CA4vNBNHK0nY&oid=00D58000000cA7m&dpt=null&viewId=");
+  height: 116.12rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,24 +20,24 @@
 }
 
 .ganas-porque-ganas-logo {
-  width: 455px;
-  height: 348px;
-  margin-top: 35px;
+  width: 28.43rem;
+  height: 21.75rem;
+  margin-top: 2.18rem;
 }
 
 .ganas-porque-ganas-nuevo-concurso {
-  width: 432px;
-  height: 51px;
-  margin-top: 37px;
+  width: 27rem;
+  height: 3.18rem;
+  margin-top: 2.31rem;
 }
 
 .ganas-porque-ganas-text {
   font-family: 'Rubik', sans-serif;
   font-weight: 700;
-  margin-top: 28px;
-  font-size: 32px;
-  line-height: 38px;
-  width: 564px;
+  margin-top: 1.75rem;
+  font-size: 2rem;
+  line-height: 2.37rem;
+  width: 35.25rem;
   color: #fff;
   text-align: center;
   text-transform: uppercase;
@@ -42,64 +45,64 @@
 }
 
 .ganas-porque-ganas-text-2 {
-  margin-top: 31px;
+  margin-top: 1.93rem;
   font-family: 'Rubik', sans-serif;
   font-weight: 700;
   font-style: italic;
-  font-size: 36px;
-  line-height: 43px;
+  font-size: 2.25rem;
+  line-height: 2.68rem;
   text-align: center;
   text-transform: uppercase;
   color: #FDD95B;
 }
 
 .ganas-porque-ganas-premios {
-  margin-top: 19px;
+  margin-top: 1.18rem;
 }
 
 .ganas-porque-ganas-detalle-premios {
-  width: 316px;
+  width: 19.75rem;
   font-family: Rubik;
   font-style: italic;
   font-weight: bold;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 1.5rem;
+  line-height: 1.75rem;
   text-align: center;
   text-transform: uppercase;
   color: #FDD95B;
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 .ganas-porque-ganas-participar {
-  margin-top: 26px;
-  width: 410px;
+  margin-top: 1.62rem;
+  width: 25.62rem;
   font-family: Rubik;
   font-style: normal;
   font-weight: bold;
-  font-size: 32px;
-  line-height: 38px;
+  font-size: 2rem;
+  line-height: 2.37rem;
   text-align: center;
   text-transform: uppercase;
   color: #fff;
 }
 
 .ganas-porque-ganas-como {
-  width: 563px;
+  width: 35.18rem;
   border: 2px solid #FFFFFF;
   box-sizing: border-box;
-  margin-top: 27px;
+  margin-top: 1.68rem;
 }
 
 .ganas-porque-ganas-title {
   font-family: Rubik;
   font-style: normal;
   font-weight: bold;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 1.5rem;
+  line-height: 1.75rem;
   text-align: center;
   text-transform: uppercase;
   color: #fff;
-  margin-top: 19px;
+  margin-top: 1.18rem;
 }
 
 
@@ -107,25 +110,25 @@
   font-family: Rubik;
   font-style: normal;
   font-weight: bold;
-  font-size: 22px;
-  line-height: 26px;
+  font-size: 1.37rem;
+  line-height: 1.62rem;
   text-transform: uppercase;
-  width: 500px;
+  width: 31.25rem;
   color: #fff;
   margin: 18px auto 19px;
 }
 
 .ganas-porque-ganas-chance {
-  width: 710px;
-  margin-top: 41px;
+  width: 44.37rem;
+  margin-top: 2.56rem;
 }
 
 .ganas-porque-ganas-chance-text {
   font-family: Rubik;
   font-style: italic;
   font-weight: 900;
-  font-size: 36px;
-  line-height: 43px;
+  font-size: 2.25rem;
+  line-height: 2.68rem;
   text-transform: uppercase;
   color: #fff;
 }
@@ -140,16 +143,24 @@
   line-height: 21px;
   text-align: center;
   text-transform: uppercase;
-  color: #000;
-  width: 200px;
+  color: #000 !important;
+  width: 12.5rem;
   padding: 10px;
   border-radius: 12px;
   display: block;
   margin-top: 10px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+
+.ganas-porque-ganas-cta:hover{
+  background: #000;
+  color: #fff;
 }
 
 .ganas-porque-ganas-no-te-pierdas {
-  width: 710px;
+  width: 44.37rem;
   display: flex;
   justify-content: flex-end;
 }
@@ -158,10 +169,10 @@
   font-family: Rubik;
   font-style: normal;
   font-weight: bold;
-  font-size: 35px;
-  line-height: 41px;
+  font-size: 2.18rem;
+  line-height: 2.56rem;
   text-align: center;
   text-transform: uppercase;
   color: #FF0000;
-  width: 295px;
+  width: 18.43rem;
 }
